src/parser/snapshots/expr/arithmetic/division_is_left_associative.snap
---
source: src/parser/parser.rs
description: arithmetic expressions with correct associativity
expression: actual.unwrap()
info: 10/2/3
---
location:
  line: 1
  column: 1
kind:
  binary:
    - divide
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - divide
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "10"
                - decimal
          - location:
              line: 1
              column: 4
            kind:
              int_constant:
                - "2"
                - decimal
    - location:
        line: 1
        column: 6
      kind:
        int_constant:
          - "3"
          - decimal
