src/parser/snapshots/expr/arithmetic/simple_division.snap
---
source: src/parser/parser.rs
description: arithmetic expressions
expression: actual.unwrap()
info: 2/4
---
location:
  line: 1
  column: 1
kind:
  binary:
    - divide
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "2"
          - decimal
    - location:
        line: 1
        column: 3
      kind:
        int_constant:
          - "4"
          - decimal
