src/parser/snapshots/expr/arithmetic/simple_remainder.snap
---
source: src/parser/parser.rs
description: arithmetic expressions
expression: actual.unwrap()
info: 3%2
---
location:
  line: 1
  column: 1
kind:
  binary:
    - modulo
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "3"
          - decimal
    - location:
        line: 1
        column: 3
      kind:
        int_constant:
          - "2"
          - decimal
